<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SharedPreferencesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSharedPreferences"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_Light"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Hello SharedPrefs" />

    <TextView
        android:id="@+id/txtCount"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_margin="20dp"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/tbSharedPreferences" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="8"
        app:layout_constraintTop_toBottomOf="@id/txtCount">

        <Button
            android:id="@+id/btnBlack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/black"
            android:text="@string/black"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnRed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/red"
            android:text="@string/red"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnBlue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/blue"
            android:text="@string/blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnGreen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/green"
            android:text="@string/green"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <Button
            android:id="@+id/btnCount"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:text="@string/count" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/reset" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>