<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".internet_connection.InternetConnectionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbInternetConnection"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/internet_connection"
        android:background="@color/blue_Light"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <LinearLayout
        android:id="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@id/tbInternetConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnGet"
            android:text="@string/get"
            android:background="@drawable/button_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnPost"
            android:text="@string/post"
            android:background="@drawable/button_format"
            android:layout_marginStart="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/id"
            android:text="id"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/name"
            android:text="Name"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/link"
            android:text="Link"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/easy"
            android:text="Easy"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/medium"
            android:text="Medium"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/hard"
            android:text="Hard"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/status"
            android:text="Status"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>